<resources>
    <string name="app_name">Sport Quiz</string>

    <string name="buy_wallpaper">Buy wallpaper</string>
    <string name="buy_and_install">Buy and install</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="install">Install</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="install_wallpaper">Install wallpaper</string>

    <string name="shop">Shop</string>
    <string name="quiz">Quiz</string>
    <string name="home">Home</string>
    <string name="points">Points</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="not_enough_points">Not enough points</string>
    <string name="interrupt_the_quiz">Interrupt the quiz?</string>
    <string name="yes">Yes</string>
    <string name="click_again_to_exit">Click again to exit</string>
</resources>